# open-chat-studio-docs

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  OCS Tags.md  README.md  api_schema.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/agents/: documentation-pr-reviewer.md  mkdocs-technical-writer.md  zensical-technical-writer.md
.claude/commands/: create-release.md  review-pr.md  write-docs.md
.github/: dependabot.yml
.github/templates/: changelog-compaction-instructions.md  changelog-instructions.md  main-changelog-section.md  widget-changelog-section.md
.github/workflows/: README-changelog-automation.md  ci.yml  claude-dependabot.yml  claude-review.yml  claude.yml  compact-changelog.yml  proof-read.yml  release.yml  update-api-docs.yml  update-changelog.yml  update-confluence.yml
about/: index.html
api/: channels.txt  chat.txt  experiment_sessions.txt  files.txt  index.html  openai.txt  participants.txt
api/getting_started_with_oauth/: index.html
assets/: extra.css
assets/javascript/: widget.js
changelog/: index.html
chat_widget/: index.html
chat_widget/changelog/: index.html
concepts/: index.html
concepts/consent/: index.html
docs/: about.md  changelog.md  domain_migration.md  index.md  overview.md
domain_migration/: index.html
how-to/: index.html
overrides/: main.html
overview/: index.html
python_node/: __init__.py
scripts/: github_release_summarizer.py  update_confluence_release.py
search/: search_index.json
tech-hub/: index.html
tutorials/: index.html
(+269 files in other folders)
