[project]
name = "ocs-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "zensical>=0.0.40",
    "mkdocs-redirects>=1.2.0",
    "mkdocstrings[python]>=1.0.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
