[project]
name = "ocs-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "zensical>=0.0.43",
    "mkdocs-redirects>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
