[project]
name = "ocs-docs"
version = "0.1.0"
description = "Open Chat Studio user documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "zensical>=0.0.43",
    "mkdocs-redirects>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "prek>=0.4.5",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"
